# poetryTest

./: README.md
blog-app/: manage.py  pyproject.toml
blog-app/app_blog/: models.py  urls.py  views.py
blog-app/app_blog/migrations/: 0001_initial.py  0002_articles.py  0003_comments.py  0004_reactions.py
blog-app/app_blog/templates/app_blog/: base_template.html  home.html
blog-app/app_blog_manager/: asgi.py  settings.py  urls.py  wsgi.py
