[project]
name = "blog-app"
version = "0.1.0"
description = ""
authors = [
    {name = "JohnSoi",email = "test@test.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]

[tool.poetry]
packages = [{include = "app_blog"}, {include="app_blog_manager"}]


[tool.poetry.group.service.dependencies]
setuptools = "^80.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
